# PatchSentryx

./: .gitignore  pyproject.toml
backend/: .env.sample  .gitignore  Dockerfile  README.md  autostart.ps1  docker-compose.yml  env.txt  pyproject.toml
backend/app/: config.py  dependency_injection.py  main.py
backend/contexts/auth/application/: authenticate_user.py  queries.py
backend/contexts/auth/domain/: entities.py
backend/contexts/auth/interfaces/: auth_router.py  dependencies.py
backend/contexts/inventory/application/: command_handlers.py  commands.py  queries.py  query_handlers.py
backend/contexts/inventory/domain/: entities.py  repositories.py
backend/contexts/inventory/infrastructure/: commands.py  mappers.py  messaging.py  models.py  queries.py  repositories.py
backend/contexts/inventory/interfaces/: collection_router.py  dependencies.py  item_router.py
backend/contexts/inventory/interfaces/consumers/: inventory_consumer.py
backend/contexts/users/application/: command_handlers.py  commands.py  queries.py  queries_handlers.py
backend/contexts/users/domain/: entities.py  repositories.py
backend/contexts/users/infrastructure/: messaging.py  models.py  repositories.py
backend/contexts/users/interfaces/: dependencies.py  user_router.py
backend/contexts/users/interfaces/consumers/: user_consumer.py
backend/core/: database.py  dependencies.py  errores.py  messaging.py  security.py
backend/scripts/: autostart.ps1
backend/test/: conftest.py
backend/test/auth/application/: test_authenticate_user.py
backend/test/auth/interfaces/: test_auth_router.py
backend/test/users/application/: test_command_handlers.py  test_query_handlers.py
backend/test/users/domain/: test_user_entity.py
backend/test/users/interfaces/: test_user_router.py
core/: Dockerfile  pyproject.toml
frontend/: package-lock.json  package.json  pyproject.toml
frontend/src/: App.css  App.js  main.py
frontend/src/app/: auth.py  dashboard.py  history.py  login.py  menu.py  register.py  routes.py  scan.py  utils.py
frontend/src/components/: LoginForm.css  LoginForm.jsx  RegisterForm.css  RegisterForm.jsx
frontend/src/components/pages/dashboard/: dashboard.css  dashboard.jsx
frontend/src/components/pages/inventory/: inventory.css  inventory.jsx
frontend/src/components/pages/scan/: scan.css  scan.jsx
frontend/src/components/sidebar/: sidebar.css  sidebar.jsx
frontend/src/data/: history.json  users.json
frontend/src/server/: db.json
frontend/src/services/: services.jsx
